--- a/style.css
+++ b/style.css
@@ -4,11 +4,70 @@
    padding: 0;
 }
 
+body {
+   font-family: 'Roboto', sans-serif;
+   font-size: 18px;
+   background-color: #594f4f;
+
+}
+
+header {
+   height: 80px;
+   background-color: #594f4f;
+   text-align: center;
+   color: white;
+   line-height: 80px;
+   vertical-align: middle;
+}
+
+.options {
+   margin: 0 10px;
+   padding: 20px;
+   background-color: #45ada8;
+   height: 100px;
+   border-radius: 10px;
+   display: flex;
+   align-items: center;
+}
+
+#play-btn,
+#level {
+   padding: 10px 20px;
+   border: 3px solid #594f4f;
+   border-radius: 10px;
+}
+
+#play-btn {
+   margin-left: 20px;
+   padding: 20px 40px;
+   font-size: 20px;
+}
+
+.board-container {
+   padding: 20px;
+   margin: 0 10px;
+
+}
+
+#points {
+   text-align: center;
+   position: fixed;
+   right: 20px;
+   bottom: 20px;
+   width: 150px;
+   padding: 10px;
+   border-radius: 10px;
+   border: 2px solid white;
+}
+
 #board {
+   width: 50%;
+   margin: 0 auto;
+   visibility: hidden;
    display: flex;
    flex-wrap: wrap;
-   background-color: yellow;
 
+   background-color: #547980;
    border: 1px solid black;
 }
 
@@ -27,4 +86,9 @@
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
+   font-size: 20px;
+}
+
+select:focus, button:focus {
+   outline: none;
 }
